# queenbee

./: .env.example  LICENSE  README.md  config.yaml  docker-compose.local.yml  docker-compose.mac.yml  docker-compose.remote.yml  pyproject.toml  pytest.ini  test_live_viewer.py  test_new_layout.py  test_no_truncation.py  test_scrolling_simulation.py  test_simple_terminal.py  test_word_wrap.py
.github/: SPECS.md  TODO.md
docs/: agent-contribution-intelligence.md  architecture_update.md  collaborative-discussion-summary.md  collaborative-discussion.md  getting-started.md  inference-packs.md  migration_summarizer.md  openrouter.md  phase2-complete.md  specialist-agents.md  streaming-and-history.md  summarizer_fix.md  testing.md
migrations/: 001_initial_schema.sql  002_add_summarizer_agent_type.sql  003_add_rate_limit_tracking.sql  003_add_web_searcher_agent_type.sql  004_add_pragmatist_agent_type.sql  005_add_user_proxy_agent_type.sql  006_add_quantifier_agent_type.sql  007_add_classifier_agent_type.sql
prompts/: classifier.md  convergent.md  critical.md  divergent.md  pragmatist.md  quantifier.md  queen.md  summarizer.md  user_proxy.md  web_searcher.md
scripts/: health_check.sh  migrate.py  run_tests.sh  test_setup.py
src/queenbee/: __init__.py
src/queenbee/agents/: base.py  classifier.py  convergent.py  critical.py  divergent.py  pragmatist.py  (+5 more)
tests/: README.md  TEST_RESULTS.md  __init__.py  conftest.py  test_agents.py  test_base_agent.py  test_config.py  test_config_coverage.py  test_database.py  test_db_connection.py  test_db_models_coverage.py  test_edge_cases.py  test_integration_async_discussion.py  test_llm.py  test_queen_advanced.py  test_queen_complexity.py  test_session.py  test_specialist_coverage.py  test_summarizer_logic.py  test_worker_logic.py  test_worker_manager_coverage.py  test_workers.py
(+12 files in other folders)
