[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "queenbee"
version = "1.0.0"
description = "Meta-agent orchestration system with specialized thinking agents"
readme = "README.md"
requires-python = ">=3.14"
license = {text = "MIT"}
authors = [
    {name = "QueenBee Contributors"}
]
keywords = ["agents", "ai", "orchestration", "llm", "ollama"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.14",
]

dependencies = [
    "agno>=0.1.0",
    "psycopg[binary]>=3.1.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.25.0",
    "rich>=13.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "black>=23.12.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
]

[project.scripts]
queenbee = "queenbee.cli.main:main"

[project.urls]
Homepage = "https://github.com/jechocarlos/queenbee"
Repository = "https://github.com/jechocarlos/queenbee"
Issues = "https://github.com/jechocarlos/queenbee/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/queenbee"]

[tool.black]
line-length = 100
target-version = ['py314']

[tool.ruff]
line-length = 100
target-version = "py314"
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.14"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=src/queenbee --cov-report=term-missing"
